[gd_scene load_steps=2 format=3 uid="uid://dcwc2wadg1kit"]

[ext_resource type="Script" path="res://src/game/death_scene.gd" id="1_trpxn"]

[node name="deathScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0033, 1)
script = ExtResource("1_trpxn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 420.61
offset_top = 213.0
offset_right = 577.61
offset_bottom = 314.0
scale = Vector2(1.8832, 1.8031)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Retry" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="BackToMainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackToMainMenu" to="." method="_on_back_to_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
